# FloriBot4.0_ROS2_Jazzy_Base

./: README.md
config/localization/: local_ekf.yaml
src/Test_scripts/: base_test.py
src/base/: CMakeLists.txt  mapping_rule_Angle.yaml  mapping_rule_Wheels.yaml
src/base/include/base/: hardware_node.hpp
src/base/include/base_node/: base_publisher.h
src/base/include/drives/: articulated_drive.h  articulated_drive.hpp
src/base/launch/: base_launch.py  base_node.launch.py  base_node_launch_floribot.py
src/base/msg/: Angle.msg  Wheels.msg
src/base/params/: hardware_params.yaml
src/base/src/base_node/: angle2tf.cpp  base_node.cpp  base_publisher.cpp  test_odom.cpp
src/base/src/drives/: articulated_drive.cpp
src/base/src/nodes/: kinematics_node.cpp
src/cmd_vel_selector/: CMakeLists.txt  package.xml
src/cmd_vel_selector/config/: cmd_vel_selector.yaml
src/cmd_vel_selector/launch/: base_with_cmd_vel_selector.launch.py  cmd_vel_selector.launch.py
src/cmd_vel_selector/src/: cmd_vel_selector_node.cpp
src/cmd_vel_selector/srv/: SelectSource.srv
src/plc_connection/: CMakeLists.txt  package.xml
src/plc_connection/include/network/socket/: socket.hpp
src/plc_connection/include/network/udp/: udp.hpp  udp_socket.hpp
src/plc_connection/include/plc_connection/: plc_connection.hpp
src/plc_connection/launch/: plc_connection_launch.py
src/plc_connection/src/: plc_connection_lib.cpp  plc_connection_node.cpp
src/plc_connection/src/network/socket/: socket.cpp
src/plc_connection/src/network/udp/: udp_socket.cpp
src/plc_connection/srv/: GetCount.srv
src/robot_description/: package.xml
src/robot_description/src/launch/: launch.py
src/robot_description/src/urdf/: Floribot.urdf.xacro
